--- a/.env
+++ b/.env
@@ -49,10 +49,10 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
+MAIL_PORT=465
 MAIL_USERNAME=sphereevent2025@gmail.com
 MAIL_PASSWORD=wattwdspxeyxctcf
-MAIL_ENCRYPTION=tls
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=sphereevent2025@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
